--- a/libfprint-0.7.0/examples/Makefile
+++ b/libfprint-0.7.0/examples/Makefile
@@ -238,15 +238,15 @@ AUTOMAKE = ${SHELL} /home/leticia/repos/fprint-infarma/libfprint-0.7.0/missing a
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g -O2
+CFLAGS = -g -O2 -lcurl -ljson-c
 CPP = gcc -E
-CPPFLAGS = 
+CPPFLAGS = -lcurl -ljson-c
 CRYPTO_CFLAGS = -I/usr/include/nss -I/usr/include/nspr
 CRYPTO_LIBS = -lnss3 -lnssutil3 -lsmime3 -lssl3 -lplds4 -lplc4 -lnspr4
 CXX = g++
 CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -O2
+CXXFLAGS = -g -O2 -lcurl -ljson-c
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -270,7 +270,7 @@ INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LD = /usr/bin/x86_64-linux-gnu-ld -m elf_x86_64
-LDFLAGS = 
+LDFLAGS = -lfprint -lcurl -ljson-c
 LIBOBJS = 
 LIBS = 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
@@ -368,6 +368,8 @@ top_srcdir = ..
 udev_rulesdir = /lib/udev/rules.d
 verify_live_SOURCES = verify_live.c
 verify_live_LDADD = ../libfprint/libfprint.la
+ponto_SOURCES = ponto.c
+ponto_LDADD = ../libfprint/libfprint.la
 enroll_SOURCES = enroll.c
 enroll_LDADD = ../libfprint/libfprint.la
 verify_SOURCES = verify.c
