--- a/libfprint-0.7.0/examples/Makefile.in
+++ b/libfprint-0.7.0/examples/Makefile.in
@@ -368,6 +368,8 @@ top_srcdir = @top_srcdir@
 udev_rulesdir = @udev_rulesdir@
 verify_live_SOURCES = verify_live.c
 verify_live_LDADD = ../libfprint/libfprint.la
+ponto_SOURCES = ponto.c
+ponto_LDADD = ../libfprint/libfprint.la
 enroll_SOURCES = enroll.c
 enroll_LDADD = ../libfprint/libfprint.la
 verify_SOURCES = verify.c
