transferênciad e compare_digital() e identify() para fora da libfprint

--- a/ponto-alpha/server/CMakeLists.txt
+++ b/ponto-alpha/server/CMakeLists.txt
@@ -8,4 +8,4 @@ add_executable(ponto_infarma verify_live.c decode.c encode.c)
 target_link_libraries(ponto_infarma fprint)
 target_link_libraries(ponto_infarma curl)
 target_link_libraries(ponto_infarma websockets)
-target_link_libraries(ponto_infarma json)
+target_link_libraries(ponto_infarma json-c)
